3.0.4  - Fixed: Correct messages used in the module log.
3.0.3  - Fixed: "Class not found" error when going to checkout.
3.0.2  - Fixed: Do not export CSV again after setting order filter parameter.
3.0.1  - Fixed: Correct display of the selected pickup point and the message after setting the pickup point for a new order.
3.0.0  - Updated: Order administration and carrier list were realized using PrestaShop's native grids (controllers).
       - Updated: The module settings page was realized using PrestaShop's native form.
       - Added: Multistore support. In the case of a multistore, the list of orders and the export in the administration
         takes into account the selected shop or shop group.
       - Added: The Packeta submenu was added to the main menu.
       - Updated: The module was tested against PrestaShop 8 and PHP 8.1 and now supports these versions.
       - Added: Possibility to prepare carrier labels.
       - Added: Possibility to set print offset when preparing packet labels.
       - Added: Possibility to post parcel via the button in our Packeta box on the order detail page in administration.
       - Added: On the order detail page it is now possible to set the dimensions of the shipment.
       - Added: Possibility to open the widget right after choosing the delivery method without the need to click on the button.
       - Updated: Treated the situation when the country of the pickup point does not correspond to the customer's address.
       - Added: Product weight in pounds and ounces is now supported.
       - Added: Possibility of using either ID or Reference as order ID in export.
       - Added: Possibility to delete PDF labels via CRON and customize deletion results with GET parameters (file age/number of deleted files at once).
       - Added: Age verification for shipments containing adult products.
       - Added: Settings for "Default package weight" and "Default packaging weight".