@@ -1,4 +1,5 @@
 3.0.4  - Fixed: Correct messages used in the module log.
+       - Fixed: Show Packeta card panel at order detail even after PS carrier update.
 3.0.3  - Fixed: "Class not found" error when going to checkout.
 3.0.2  - Fixed: Do not export CSV again after setting order filter parameter.
 3.0.1  - Fixed: Correct display of the selected pickup point and the message after setting the pickup point for a new order.
